--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -2,14 +2,14 @@
 
 {% block content %}
     <div style="display: flex; justify-content: space-between; flex-wrap: ">
-        {% for products in products %}
-            <div class="card" style="width: 18rem;">
+         {% for product in products %}
+         <div class="card" style="width: 18rem;">
                 <div class="card-body">
-                    <h5 class="card-title">{{ products.name }}</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary">Price: {{ products.price }}</h6>
-                    <a href="#" class="card-link">More</a>
+                    <h5 class="card-title">{{ product.name }}</h5>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">Price: {{ product.price }}</h6>
+                    <a href="/products/{{ product.id }}/" class="card-link">More</a>
                 </div>
-            </div>
-        {% endfor %}
+         </div>
+         {% endfor %}
     </div>
 {% endblock %}
