--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -26,12 +26,22 @@
         <li class="nav-item">
           <a class="nav-link" href="/products">Products</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
+          {% if not user.is_ananymous %}
+              <li class="nav-item">
+                  <a class="nav-link" href="/products/create/">Create Product</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link " href="/users/logout/">Logout</a>
+              </li>
+          {% else %}
+              <li class="nav-item">
+                  <a class="nav-link" href="/users/register/">Register</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/users/login/">Login</a>
+              </li>
+          {% endif %}
+
       </ul>
     </div>
   </div>
